--- a/requirements.txt
+++ b/requirements.txt
@@ -41,8 +41,6 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==3.9.2
 kiwisolver==1.4.8
---no-binary=kpler-sdk
-kpler-sdk @ https://github.com/Kpler/kpler-sdk/archive/refs/tags/v1.0.53.zip
 libclang==18.1.1
 lightgbm==4.6.0
 llvmlite==0.44.0
@@ -62,7 +60,7 @@ openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.15.0
 packaging==24.2
-pandas==1.5.3
+pandas>=2.0,<3.0
 parso==0.8.4
 patsy==1.0.1
 pillow==11.2.1
@@ -114,3 +112,6 @@ watchdog==6.0.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
+
+--no-binary=kpler-sdk
+-e vendor/kpler-sdk
