--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,114 @@
-absl-py==2.2.2
-altair==5.5.0
-asttokens==3.0.0
-astunparse==1.6.3
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.2
-cycler==0.12.1
-debugpy==1.8.14
-decorator==5.2.1
-et_xmlfile==2.0.0
-executing==2.2.0
-faiss-cpu==1.10.0
-flatbuffers==25.2.10
-fonttools==4.57.0
-fredapi==0.5.2
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-pasta==0.2.0
-greenlet==3.2.0
-grpcio==1.71.0
-h5py==3.13.0
-idna==3.10
-ipykernel==6.29.5
-ipython==9.1.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==3.9.2
-kiwisolver==1.4.8
-libclang==18.1.1
-lightgbm==4.6.0
-llvmlite==0.44.0
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml_dtypes==0.5.1
-namex==0.0.8
-narwhals==1.35.0
-nest-asyncio==1.6.0
-numba==0.61.2
-numpy==1.26.4
-openpyxl==3.1.5
-opt_einsum==3.4.0
-optree==0.15.0
-packaging==24.2
-pandas>=2.0,<3.0
-parso==0.8.4
-patsy==1.0.1
-pillow==11.2.1
-platformdirs==4.3.7
-prompt_toolkit==3.0.51
-protobuf==5.29.4
-psutil==7.0.0
-pure_eval==0.2.3
-pyarrow==19.0.1
-pydeck==0.9.1
-Pygments==2.19.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyWavelets==1.8.0
-pywin32==310; sys_platform=="win32"
-pyzmq==26.4.0
-referencing==0.36.2
-requests==2.31.0
-rich==14.0.0
-rpds-py==0.24.0
-scikit-learn==1.6.1
-scipy==1.15.2
-six==1.17.0
-smmap==5.0.2
-SQLAlchemy==2.0.40
-stack-data==0.6.3
-statsmodels==0.14.4
-streamlit==1.44.1
-stumpy==1.13.0
-tenacity==9.1.2
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem>=0.37.1
-tensorflow_keras==0.1
-termcolor==3.0.1
-threadpoolctl==3.6.0
-toml==0.10.2
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-tsfresh==0.21.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-vmdpy==0.2
-watchdog==6.0.0
-wcwidth==0.2.13
-Werkzeug==3.1.3
-wrapt==1.17.2
+absl-py
+altair
+asttokens
+astunparse
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+cloudpickle
+colorama
+comm
+contourpy
+cycler
+debugpy
+decorator
+et_xmlfile
+executing
+faiss-cpu
+flatbuffers
+fonttools
+fredapi
+gast
+gitdb
+GitPython
+google-pasta
+greenlet
+grpcio
+h5py
+idna
+ipykernel
+ipython
+ipython_pygments_lexers
+jedi
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+jupyter_client
+jupyter_core
+keras
+kiwisolver
+libclang
+lightgbm
+llvmlite
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+ml_dtypes
+namex
+narwhals
+nest-asyncio
+numba
+numpy
+openpyxl
+opt_einsum
+optree
+packaging
+pandas
+parso
+patsy
+pillow
+platformdirs
+prompt_toolkit
+protobuf
+psutil
+pure_eval
+pyarrow
+pydeck
+Pygments
+pyparsing
+python-dateutil
+python-dotenv
+pytz
+PyWavelets
+pywin32
+pyzmq
+referencing
+requests
+rich
+rpds-py
+scikit-learn
+scipy
+six
+smmap
+SQLAlchemy
+stack-data
+statsmodels
+streamlit
+stumpy
+tenacity
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-io-gcs-filesystem
+tensorflow_keras
+termcolor
+threadpoolctl
+toml
+tornado
+tqdm
+traitlets
+tsfresh
+typing_extensions
+urllib3
+vmdpy
+watchdog
+wcwidth
+Werkzeug
+wrapt
